(U) iniciando tests unitarios

--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -36,7 +36,7 @@
             <mat-radio-button checked value="M/G">M/G</mat-radio-button>
           </mat-radio-group>
     </div>
-    <button mat-raised-button color="primary" (click)="adicionar()">ADICIONAR</button>
+    <button mat-raised-button color="primary" (click)="adicionar(despesaItem)">ADICIONAR</button>
 </div>
 <hr>
 <div class="dad-container">
