--- a/src/app/components/pdf-page/pdf-page.component.html
+++ b/src/app/components/pdf-page/pdf-page.component.html
@@ -20,5 +20,7 @@
     <strong > Total : {{total | currency:'BRL'}}</strong><br>
     <strong> M : {{totalM | currency:'BRL'}}</strong><br>
     <strong> G : {{totalG | currency:'BRL'}}</strong><br>
-    <strong> M/G : {{totalMG | currency:'BRL'}}</strong>  
+    <strong> M/G : {{totalMG | currency:'BRL'}}</strong><br>
+    <strong> C : {{totalC | currency:'BRL'}}</strong><br>
+    <strong> C/M : {{totalCM | currency:'BRL'}}</strong>  
   </div>
